==> Heeju99/embedded/250630_Mini_Project/Core/driver/Buzzer/Buzzer.c <==
#include "Buzzer.h"

static TIM_HandleTypeDef *hbuzzerTim;
static uint32_t buzzerTimChannel;

void Buzzer_Init(TIM_HandleTypeDef *htim, uint32_t channel)
{
	hbuzzerTim = htim;
	buzzerTimChannel = channel;
}

void Buzzer_SetFreq(uint32_t freq)
{
	if(freq - 1 < 100) freq = 100;    // 100 < freq <10kHz
	else if (freq > 10000) freq = 10000;

	__HAL_TIM_SET_AUTORELOAD(&htim3, 1000000 /freq -1);     // Set Counter
	__HAL_TIM_SET_COMPARE(&htim3, TIM_CHANNEL_1, 1000000/freq/2-1);  //duty_ratio
}

void Buzzer_Start()
{
	HAL_TIM_PWM_Start(hbuzzerTim, buzzerTimChannel);
}

void Buzzer_Stop()
{
	HAL_TIM_PWM_Stop(hbuzzerTim, buzzerTimChannel);
}
